a host of fixes for gallery: disabling swipe while swiping, fixing URL updating so pushstate works with back/fwd buttons, fixing firefox mobile bug and adding gap between items when swiping

--- a/common/app/assets/stylesheets/module/_gallery.less
+++ b/common/app/assets/stylesheets/module/_gallery.less
@@ -3,6 +3,10 @@
     margin: 0px @gutter;
 }
 
+.gallery-swipe .gallery-container {
+    margin: 0;
+}
+
 .gallery-caption {
     margin-top: @baseline;
 }
@@ -19,13 +23,14 @@
     margin-top: @baseline;
 }
 
-.gallery-swipe li img {
-    width: 100%;
+.gallery-swipe li img,
+.gallery-swipe .gallery-caption {
+    width: 94%;
+    margin: 0 3%;
 }
 
 .gallery-swipe li {
     float: left;
-    width: 300px;
     min-height: 200px;
 }
 
